# register-hosted-happs

./: Cargo.toml  README.md
resources/test/: conductor-config-v2.toml  conductor-config.toml  hosted-happs-list.toml
src/: main.rs  tests.rs
