[package]
name = "register-hosted-happs"
version = "0.0.1"
authors = ["PJ <pj@imagine-nyc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_derive = "1.0.105"
serde = "1.0"
toml = "0.5.6"
serde_json = "1.0.39"