[package]
name = "register-hosted-happs"
version = "0.0.1"
authors = ["PJ <pj@imagine-nyc.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.5.6"
ed25519-dalek = { version = "1.0.0-pre.1", features = ["serde"] }
hpos-config-core = { git = "https://github.com/Holo-Host/hpos-config", branch = "develop" }
base64 = "0.10.1"